# sender3

./: .gitignore  README.md  mypy.ini  pyproject.toml
config/: settings.py  urls.py
send/: admin.py  forms.py  models.py  servicies.py  urls.py  views.py
send/templates/send/: attempttosend_form.html  attempttosend_list.html  base.html  main.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  newsletter_confirm_delete.html  newsletter_detail.html  newsletter_form.html  newsletter_list.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html
send/templates/send/includes/: inc_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py  manager.py
users/templates/: login.html  user_detail.html  user_list.html
users/templates/users/: customuser_form.html
